fix: improved header on small screens

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -46,3 +46,11 @@
   justify-content: center;
   align-items: center;
 }
+
+.header button {
+  @media (max-width: 500px) {
+    font-size: 12px;
+    padding: 0px 8px;
+    height: 30px;
+  }
+}
