--- a/src/components/header/settings/settings.module.scss
+++ b/src/components/header/settings/settings.module.scss
@@ -123,6 +123,11 @@ $color-dropdown-border: $color-border-red;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 500px) {
+    height: 30px;
+    width: 30px;
+  }
 }
 
 .profile-img {
